--- a/src/schemas/key_data_secrets.yaml
+++ b/src/schemas/key_data_secrets.yaml
@@ -5,8 +5,8 @@ key_data_secrets:
       type: array
       items:
         type: string
-        min_length: 24
-        max_length: 24
+        minLength: 24
+        maxLength: 24
     bytes:
       type: string
       format: bytes
